# VIVENTI

./: .dockerignore  .gitignore  API_docs.md  README.md  main.py  pyproject.toml
chatbot/ai_agent/: __init__.py  agent.py  date_agent.py  dependencies.py  error_agent.py  instructions.py  models.py  prompts.py  qualification_subagent.py  reminder_localizer.py
chatbot/api/: chat_router.py  main.py  telegram_bot.py  whatsapp_router.py
chatbot/audio/: stt.py
chatbot/core/: config.py  human_control.py
chatbot/db/: schema.py  services.py
chatbot/domain/: __init__.py  conversation_states.py  demo.py  google_sync.py  qualification.py
chatbot/messaging/: telegram_notifier.py  whatsapp.py
chatbot/reminders/: demo_reminder_worker.py  follow_up_worker.py  scheduler.py  sheets_sync_worker.py
chatbot/services/: __init__.py  channel_router.py  conversation_state_service.py  email_service.py  gmail_service.py  google_calendar_service.py  google_sheets_service.py  google_sheets_sync.py  lead_orchestrator.py  message_processor.py  qualification_service.py
chatbot/tests/: test_conversation_state_service.py  test_email_service.py  test_gmail_service.py  test_google_calendar_service.py  test_google_sheets_mapping.py  (+1 more)
docker/: Dockerfile  docker-compose.yml
scripts/: authorize_gmail.py  deactivate_all_chats.py  debug_erp_response.py  list_google_models.py  migrate_add_active_column.py  migrate_viventi_lead_schema.py  sync_db_to_sheets.py  telegram_get_chat_id.py  test_agent_repl.py  test_date_agent_repl.py
sql/: add_active_column_to_messages.sql  viventi_lead_schema.sql
(+14 files in other folders)
