[project]
name = "viventi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.135.3",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "gspread>=6.2.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.80.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-json-logger>=4.1.0",
    "python-telegram-bot>=22.7",
    "sentry-sdk>=2.57.0",
    "sqlalchemy>=2.0.49",
    "tzdata>=2026.1",
]
